--- a/Part2/GhostDrawingBoard/GhostDrawingBoard/Base.lproj/Main.storyboard
+++ b/Part2/GhostDrawingBoard/GhostDrawingBoard/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,104 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GhostDrawingBoard" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2w1-C5-ILA">
+                                <rect key="frame" x="16" y="75" width="361" height="653"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="R80-Cs-ET7">
+                                <rect key="frame" x="76.000000000000014" y="752" width="241.33333333333337" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5nf-gO-bq9" userLabel="Red">
+                                        <rect key="frame" x="0.0" y="0.0" width="57.333333333333336" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="13C-2O-TcX"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray">
+                                            <color key="baseBackgroundColor" systemColor="systemRedColor"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="redButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HPn-Hr-ZI5"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rID-eS-Upy" userLabel="Blue">
+                                        <rect key="frame" x="61.333333333333343" y="0.0" width="57.333333333333343" height="50"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray">
+                                            <color key="baseBackgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="blueButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fls-OL-7Ts"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajx-nv-mgW" userLabel="Green">
+                                        <rect key="frame" x="122.66666666666664" y="0.0" width="57.333333333333329" height="50"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray">
+                                            <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="greenButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SDw-76-grP"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Udx-ju-7Z3" userLabel="Eraser">
+                                        <rect key="frame" x="184" y="0.0" width="57.333333333333343" height="50"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray" title="Eras"/>
+                                        <connections>
+                                            <action selector="eraseButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cvJ-at-hZR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="rID-eS-Upy" firstAttribute="width" secondItem="5nf-gO-bq9" secondAttribute="width" id="2Lm-pb-KZR"/>
+                                    <constraint firstItem="rID-eS-Upy" firstAttribute="height" secondItem="5nf-gO-bq9" secondAttribute="height" id="4oo-V8-LmO"/>
+                                    <constraint firstItem="Udx-ju-7Z3" firstAttribute="height" secondItem="5nf-gO-bq9" secondAttribute="height" id="HPZ-ZV-n4Q"/>
+                                    <constraint firstItem="Udx-ju-7Z3" firstAttribute="width" secondItem="5nf-gO-bq9" secondAttribute="width" id="KTN-9K-MF1"/>
+                                    <constraint firstAttribute="height" constant="50" id="g4e-aO-tdq"/>
+                                    <constraint firstItem="ajx-nv-mgW" firstAttribute="height" secondItem="5nf-gO-bq9" secondAttribute="height" id="n1t-z0-87e"/>
+                                    <constraint firstItem="ajx-nv-mgW" firstAttribute="width" secondItem="5nf-gO-bq9" secondAttribute="width" id="tND-WC-BGX"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2w1-C5-ILA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="3rF-N0-NPV"/>
+                            <constraint firstItem="R80-Cs-ET7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5fv-GK-Zx9"/>
+                            <constraint firstItem="2w1-C5-ILA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Gnk-oJ-Y1K"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2w1-C5-ILA" secondAttribute="trailing" constant="16" id="IHf-Ge-A2E"/>
+                            <constraint firstItem="R80-Cs-ET7" firstAttribute="top" secondItem="2w1-C5-ILA" secondAttribute="bottom" constant="24" id="L07-rG-Way"/>
+                            <constraint firstItem="R80-Cs-ET7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="QdP-98-Cew"/>
+                            <constraint firstItem="2w1-C5-ILA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W0Q-go-xyS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="R80-Cs-ET7" secondAttribute="trailing" constant="16" id="qxV-o8-0iE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R80-Cs-ET7" secondAttribute="bottom" constant="16" id="xTf-p5-2iG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blueButton" destination="rID-eS-Upy" id="8zO-r5-s35"/>
+                        <outlet property="drwaingView" destination="2w1-C5-ILA" id="oyW-Qh-Szv"/>
+                        <outlet property="eraseButton" destination="Udx-ju-7Z3" id="Fpu-ZI-ler"/>
+                        <outlet property="greenButton" destination="ajx-nv-mgW" id="dS9-14-IJe"/>
+                        <outlet property="redButton" destination="5nf-gO-bq9" id="59A-85-9YZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="25"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
